--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
 h1 {
-    color: red
+    color: rgb(180, 79, 201);
+}
+
+.box {
+    width: 200px;
+    height: 100px;
+    position: relative;
+    top: 200px;
+    left: 200px;
+    background-color: rgb(117, 189, 23);
+    color:white;
 }
